@@ -6303,18 +6303,21 @@ local void pr_circle (const gcv_object_t* stream_, object obj, pr_routine_t* pr_
 #define DISPATCH_TABLE_VALID_P(dt)  \
  (mconsp(dt) && eq(Car(dt),S(print_pprint_dispatch)) && !nullp(Cdr(dt)))
 # call the appropriate function
-local void pretty_print_call (const gcv_object_t* stream_,object obj,
-                              pr_routine_t* pr_xxx_default) {
-  object ppp_disp = Symbol_value(S(print_pprint_dispatch));
+local void pretty_print_call (const gcv_object_t* stream_, object obj, pr_routine_t* pr_xxx_default) {
+  var object ppp_disp = Symbol_value(S(print_pprint_dispatch));
   if (!boundp(Symbol_value(S(prin_pprinter))) /* been here already! */
       && DISPATCH_TABLE_VALID_P(ppp_disp)) {
+    /* Call (PPRINT-DISPATCH obj): */
+    pushSTACK(obj); /* save */
     pushSTACK(obj); funcall(S(pprint_dispatch),1);
-    if (nullp(value2)) goto default_printing;
-    pushSTACK(*stream_); pushSTACK(obj); funcall(value1,2);
-  } else {
-   default_printing:
-    (*pr_xxx_default)(stream_,obj);
+    obj = popSTACK(); /* restore */
+    if (!nullp(value2)) {
+      pushSTACK(*stream_); pushSTACK(obj); funcall(value1,2);
+      return;
+    }
   }
+  /* Default printing: */
+  (*pr_xxx_default)(stream_,obj);
 }
 #undef DISPATCH_TABLE_VALID_P
 
